--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,10 @@ body h1, header {
   text-align: center;
 }
 
+.border{
+  border: 1px solid ghostwhite;
+}
+
 .cards-container{
   display: flex;
   flex-wrap: wrap;
@@ -30,19 +34,30 @@ body h1, header {
   min-width: 3rem;
   border: 1px solid beige;
   min-width: 30%;
+  margin: 1rem;
+  padding: 1em;
 }
 
-.flex-row{
-  
+code {
+  font-family: Consolas,"courier new";
+  color: crimson;
+  background-color: #f1f1f1;
+  font-size: 105%;
+  justify-content: center;
+  margin: 0 auto;
 }
-
 .card-title{
   background: white;
   color: #000;
   text-align: center;
   width: 75%;
   margin: 0 auto;
-  
+  transform: translate(0, -1.5rem);
+  justify-content: center;
+}
+
+.card-subheader p{
+  margin: 1rem 0;
 }
 
 footer {
