--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,20 +3,25 @@ body {
   flex-direction: column;
   line-height: 1.3;
 }
-body h1, header {
-  display: flex;
-  justify-content: center;
-  padding: 1rem 0;
+header {
   background-color: #13293d;
+  padding: 1rem;
+}
+
+h1, h2{
   color: #fff;
 }
 
-.secondary-header{
-  text-align: center;
+h1{
+  font-size: 2rem;
+}
+h2{
+  font-size: 1rem;
+  margin: 1rem 0;
 }
 
 .border{
-  border: 1px solid ghostwhite;
+  border: .25px solid ghostwhite;
 }
 
 .cards-container{
@@ -24,6 +29,11 @@ body h1, header {
   flex-wrap: wrap;
   justify-content: center;
   margin: 2rem 0;
+  text-align: center;
+}
+
+.cards-container p{
+  text-align: left;
 }
 
 .card{
@@ -42,10 +52,11 @@ code {
   background-color: #f1f1f1;
   font-size: 105%;
   justify-content: center;
-  margin: 0 auto;
+  margin: 1em auto;
 }
+
 .card-title{
-  background: white;
+  background: lightgoldenrodyellow;
   color: #000;
   text-align: center;
   width: 75%;
@@ -74,5 +85,8 @@ footer {
 @media screen and (max-width: 768px) {
   header {
     flex-direction: column;
+  }
+  .card{
+    min-width: 100%;
   }
 }
