--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,16 +20,20 @@ h2{
   font-size: 1rem;
   margin: 1rem 0;
 }
-
+p{
+  font-family: sans-serif;
+}
 .border{
-  border: .25px solid ghostwhite;
+  border: .25px solid rgba(0,0,0,.15);
+  border-radius: 4px;
+  padding: 1rem;
 }
 
 .cards-container{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin: 2rem 0;
+  margin: 2rem 10px;
   text-align: center;
 }
 
@@ -45,6 +49,15 @@ h2{
   min-width: 30%;
   margin: 1rem;
   padding: 1em;
+  box-shadow: 0 4px 6px rgba(50,50,93,.11), 0 1px 3px rgba(0,0,0,.08);
+  transition: all .22s;
+}
+
+
+.card:hover{
+  transform: translateY(-2px);
+  box-shadow: 0 7px 14px rgba(50,50,93,.1), 0 3px 6px rgba(0,0,0,.08);
+  filter: brightness(110%);
 }
 
 code {
@@ -78,6 +91,7 @@ footer {
   background-color: #13293d;
   color: #fff;
   position: fixed;
+  margin-top: 1rem;
   left: 0;
   bottom: 0;
   width: 100%;
